# zks

./: Cargo.toml  README.md  plan.md
crates/zks_crypt/: Cargo.toml
crates/zks_crypt/src/: drand.rs  scramble.rs  wasif_vernam.rs
crates/zks_mcp/: Cargo.toml
crates/zks_mcp/src/: lib.rs
crates/zks_mcp/src/prompts/: architecture.rs  implementation.rs  review.rs  security.rs
crates/zks_mcp/src/resources/: code.rs  docs.rs  examples.rs  mod.rs  status.rs
crates/zks_mcp/src/tools/: analysis.rs  crypto.rs  dev.rs  mod.rs  network.rs  test.rs
crates/zks_mcp/src/transport/: http.rs  mod.rs  stdio.rs
crates/zks_mcp/tests/: integration.rs
crates/zks_pqcrypto/: Cargo.toml
crates/zks_pqcrypto/src/: ml_kem.rs
crates/zks_proto/: Cargo.toml
crates/zks_proto/src/: handshake.rs
crates/zks_sdk/: Cargo.toml
crates/zks_sdk/src/connection/: zks.rs
crates/zks_sdk/src/prefabs/: messenger.rs
crates/zks_types/src/crypto/: mod.rs
crates/zks_uniffi/: Cargo.toml  uniffi.toml
crates/zks_uniffi/src/: lib.rs  test.udl  test_minimal.udl  zks_uniffi.udl  zks_uniffi_minimal.udl
crates/zks_wasm/: Cargo.toml
crates/zks_wasm/src/: bindings.rs  lib.rs  onion_transport.rs  test_bindings.rs  transport.rs
crates/zks_wire/: Cargo.toml
crates/zks_wire/src/: circuit.rs  lib.rs  p2p.rs  relay.rs  signaling.rs  swarm_controller.rs
